--- a/Lab3/src/sample/sample.fxml
+++ b/Lab3/src/sample/sample.fxml
@@ -6,5 +6,6 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <Button fx:id="btnMain" layoutX="110.0" layoutY="125.0" mnemonicParsing="false" onAction="#onBtnAction" text="Kliknij mnie!" />
+      <TextField fx:id="txtLicznik" layoutX="76.0" layoutY="165.0" />
    </children>
 </AnchorPane>
