--- a/Lab3/src/sample/sample.fxml
+++ b/Lab3/src/sample/sample.fxml
@@ -3,9 +3,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="187.0" prefWidth="384.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Button fx:id="btnMain" layoutX="110.0" layoutY="125.0" mnemonicParsing="false" onAction="#onBtnAction" text="Kliknij mnie!" />
-      <TextField fx:id="txtLicznik" layoutX="76.0" layoutY="165.0" />
+      <Button fx:id="btnCalculate" layoutX="14.0" layoutY="149.0" mnemonicParsing="false" onAction="#onBtnAction" prefHeight="25.0" prefWidth="149.0" text="Oblicz!" />
+      <TextField fx:id="radius" layoutX="14.0" layoutY="31.0" promptText="Wpisz promień walca" />
+      <TextField fx:id="height" layoutX="14.0" layoutY="73.0" promptText="Wpisz wysokość walca" />
+      <TextField fx:id="thickness" layoutX="14.0" layoutY="115.0" promptText="Wpisz grubość blachy" />
+      <Label layoutX="14.0" layoutY="14.0" text="Promień:" />
+      <Label layoutX="14.0" layoutY="56.0" text="Wysokość:" />
+      <Label layoutX="14.0" layoutY="98.0" text="Grubość blachy:" />
+      <TextField fx:id="result" editable="false" layoutX="195.0" layoutY="31.0" />
+      <TextField fx:id="price1" layoutX="195.0" layoutY="81.0" />
+      <Label layoutX="195.0" layoutY="14.0" text="Objętość:" />
+      <Label layoutX="195.0" layoutY="65.0" text="Cena - normalna blacha stalowa:" />
+      <TextField fx:id="price2" layoutX="195.0" layoutY="137.0" />
+      <Label layoutX="195.0" layoutY="119.0" prefHeight="17.0" prefWidth="186.0" text="Cena - blacha stalowa nierdzewna:" />
    </children>
 </AnchorPane>
