--- a/Lab4/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
+++ b/Lab4/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
@@ -1,8 +1,13 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="pl.lublin.wsei.java.cwiczenia.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.layout.AnchorPane?>
+
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.lublin.wsei.java.cwiczenia.Controller">
+   <children>
+      <Button layoutX="92.0" layoutY="125.0" mnemonicParsing="false" onAction="#btnOpenFileAction" text="Otwórz plik" />
+      <Label fx:id="lbFile" layoutX="179.0" layoutY="129.0" prefHeight="17.0" prefWidth="391.0" style="-fx-font-style: italic;" text="Proszę wczytać plik..." />
+   </children>
+</AnchorPane>
