--- a/Lab4/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
+++ b/Lab4/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
@@ -9,5 +10,6 @@
    <children>
       <Button layoutX="92.0" layoutY="125.0" mnemonicParsing="false" onAction="#btnOpenFileAction" text="Otwórz plik" />
       <Label fx:id="lbFile" layoutX="179.0" layoutY="129.0" prefHeight="17.0" prefWidth="391.0" style="-fx-font-style: italic;" text="Proszę wczytać plik..." />
+      <ListView fx:id="lstInfografiki" layoutX="92.0" layoutY="171.0" prefHeight="301.0" prefWidth="314.0" />
    </children>
 </AnchorPane>
