--- a/Lab4/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
+++ b/Lab4/src/pl/lublin/wsei/java/cwiczenia/gusInfoGraphic.fxml
@@ -3,13 +3,22 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.lublin.wsei.java.cwiczenia.Controller">
    <children>
-      <Button layoutX="92.0" layoutY="125.0" mnemonicParsing="false" onAction="#btnOpenFileAction" text="Otwórz plik" />
-      <Label fx:id="lbFile" layoutX="179.0" layoutY="129.0" prefHeight="17.0" prefWidth="391.0" style="-fx-font-style: italic;" text="Proszę wczytać plik..." />
+      <Button layoutX="92.0" layoutY="30.0" mnemonicParsing="false" onAction="#btnOpenFileAction" text="Otwórz plik" />
+      <Label fx:id="lbFile" layoutX="181.0" layoutY="34.0" prefHeight="17.0" prefWidth="391.0" style="-fx-font-style: italic;" text="Proszę wczytać plik..." />
       <ListView fx:id="lstInfografiki" layoutX="92.0" layoutY="171.0" prefHeight="301.0" prefWidth="314.0" />
+      <Label layoutX="92.0" layoutY="154.0" prefHeight="17.0" prefWidth="63.0" text="Infografiki" />
+      <ImageView fx:id="imgMiniaturka" fitHeight="236.0" fitWidth="314.0" layoutX="439.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="439.0" layoutY="183.0" text="Miniaturka" />
+      <Button layoutX="676.0" layoutY="447.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" text="Pokaż" />
+      <TextField fx:id="txtAdresStrony" layoutX="92.0" layoutY="510.0" prefHeight="25.0" prefWidth="574.0" />
+      <Label layoutX="92.0" layoutY="493.0" text="Adres strony" />
+      <Button layoutX="675.0" layoutY="510.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" text="Załaduj" />
    </children>
 </AnchorPane>
